--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2021"
 
 [dependencies]
 pandoc = "0.8"
-dotenv = "0.15.0"
 image = "0.23.14"
 regex = "1.5.4"
 chrono = "0.4.19"
 simple-xml-builder = "1.1.0"
+serde_json = "1.0.74"
