--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
   "blog_location": "/home/pfych/Documents/Scratchpad-write",
   "blog_template": "./template/blog/index.html",
+  "index_template": "./template/index.html",
   "image_location": "/home/pfych/Documents/Scratchpad-write/images",
   "author": "pfych",
   "url": "https://pfy.ch",
