--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ chrono = "0.4.19"
 simple-xml-builder = "1.1.0"
 serde_json = "1.0.74"
 chrono-tz = "0.6.1"
+serde = {version = "1.0.133", features = ["derive"]}
