--- a/config.json
+++ b/config.json
@@ -3,6 +3,7 @@
   "image_location": "/home/pfych/Documents/Scratchpad-write/images",
   "blog_template": "./template/blog/index.html",
   "index_template": "./template/index.html",
+  "image_page_template": "./template/images.html",
   "author": "pfych",
   "url": "https://pfy.ch",
   "file_suffix": "-write.md"
